webserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server-container
        image: eu.gcr.io/PROJECT_ID/web:v1
        ports:
        - containerPort: 80
