ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: web-server-service
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: web-server-service2
          servicePort: 80
